src/objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Case_Description__c</fullName>
        <label>Case Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_RecordType__c</fullName>
        <label>Case RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <label>Case Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Framework</label>
        <referenceTo>Framework__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OMB_Control_No__c</fullName>
        <label>OMB Control No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMB_Expiration_Date__c</fullName>
        <label>OMB Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Object_API__c</fullName>
        <defaultValue>&quot;Participation__c&quot;</defaultValue>
        <label>Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK (&quot;https://www.export.gov/form?id=&quot;&amp;Id,&quot;click here to preview this form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Catalog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Catalog</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thank_You_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Thank You Page</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Resource_Type__c</fullName>
        <label>Web Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Web_Resource_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Header__c</columns>
        <columns>Preview__c</columns>
        <columns>Product_Catalog__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Case_RecordType__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>OMB</fullName>
        <active>true</active>
        <label>OMB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>